@@ -33,12 +33,7 @@ import javafx.stage.Stage;
 import org.controlsfx.control.SearchableComboBox;
 import org.controlsfx.control.ToggleSwitch;
 
-import javax.imageio.ImageIO;
-import java.awt.image.BufferedImage;
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
 import java.net.URL;
-import java.security.Key;
 import java.time.LocalDateTime;
 import java.util.*;
 
@@ -47,35 +42,44 @@ public class ScanController implements Initializable, IViewController {
     @FXML private BorderPane workspaceView;
     @FXML private Label lblUsername, lblRole, lblEmptyState;
     @FXML private ToggleSwitch darkMode;
-    @FXML private Button btnScan, btnStop, btnRotLeft, btnRotRight, btnNewDoc, btnSplitDoc, btnDelete, btnUndo, btnExport, btnZoomOut, btnZoomIn;
+    @FXML private Button btnScan, btnStop, btnRotLeft, btnRotRight, btnUndo, btnExport, btnZoomOut, btnZoomIn, btnFileAdjustments;
     @FXML private ComboBox<ExportMode> comboBoxExport;
     @FXML private FlowPane pageGrid;
-    @FXML private Label lblSessionStatus, pageInfoLabel, stDocsLabel, stPagesLabel;
+    @FXML private Label lblSessionStatus, lblCurrentPage, lblCurrentDocument, stDocsLabel, stPagesLabel;
     @FXML private TreeView<TreeNode> boxTreeView;
+    @FXML private Spinner<Integer> spinnerRotation;
 
-    // Session startup popup
+    // Session Startup Popup
     @FXML private StackPane sessionPopupOverlay;
     @FXML private SearchableComboBox<Profile> comboBoxProfiles;
     @FXML private TextField txtFldBoxId, txtFldGlobalRotation, txtFldGlobalHue, txtFldGlobalBrightness, txtFldGlobalContrast, txtFldGlobalSaturation;
 
-    // File adjustment menu
-    @FXML private StackPane sessionPopupOverlay1;
-    @FXML private TextField txtFldIndividualFileRotation, txtFldIndividualFileHue, txtFldIndividualFileBrightness, txtFldIndividualFileContrast, txtFldIndividualFileSaturation;
+    // File Adjustment Menu
+    @FXML private StackPane fileAdjustmentSideMenu;
+    @FXML private Spinner<Integer> spinnerFileAdjustmentRotation, spinnerFileAdjustmentHue, spinnerFileAdjustmentBrightness, spinnerFileAdjustmentContrast, spinnerFileAdjustmentSaturation;
+    @FXML private Slider sliderHue, sliderBrightness, sliderContrast, sliderSaturation, sliderRotation;
 
     private Stage currentStage;
     private ModelFacade modelFacade;
     private ScanModel scanModel;
-    private TreeItem<TreeNode> root = new TreeItem<>();
+    private User currentUser = null;
     private final ObservableList<Document> documents = FXCollections.observableArrayList();
     private Document selectedDocument;
     private File selectedFile;
     private Box selectedBox;
+    private ImageView currentPreviewImageView;
     private boolean sessionActive;
-
+    private final TreeItem<TreeNode> root = new TreeItem<>();
+    private final ChangeListener<TreeItem<TreeNode>> treeSelectionListener =
+            (obs, oldValue, newValue) -> onTreeSelectionChanged(newValue);
     private TreeNode draggedNode; // used for drag detection (gets nulled after drop)
+
+    private final Deque<Runnable> undoStack = new ArrayDeque<>();
+    private static final int maxUndos = 30;
+
     private Thread scanThread; // scan loop is controlled by the volatile boolean 'scanning', not thread interruption
     private volatile boolean scanning = false; // volatile: FX-thread writes are immediately visible to the scan thread
-    private static final long scanDelay = 2000; // milliseconds to wait between successive scans in the scan loop
+    private static final long scanDelay = 1000; // milliseconds to wait between successive scans in the scan loop
 
     // Zoom Level stuff
     private double zoomLevel = 1.0; // default
@@ -83,43 +87,53 @@ public class ScanController implements Initializable, IViewController {
     private static final double ZOOM_MIN  = 0.40;
     private static final double ZOOM_MAX  = 3.00;
 
-    private final ChangeListener<TreeItem<TreeNode>> treeSelectionListener =
-            (obs, oldValue, newValue) -> onTreeSelectionChanged(newValue);
-    private final java.util.Deque<Runnable> undoStack = new java.util.ArrayDeque<>();
-    @FXML
-    private Spinner<Integer> spinnerRotation;
-
     @Override
     public void setModel(ModelFacade modelFacade, Stage currentStage) {
         this.modelFacade = modelFacade;
         this.currentStage = currentStage;
-        initializeProfileComboBox();
 
-        lblUsername.setText(modelFacade.getSessionModel().getCurrentUser().getUsername());
-        lblRole.setText("Role: " + modelFacade.getSessionModel().getCurrentUser().getRole().toString());
+        currentUser = modelFacade.getSessionModel().getCurrentUser();
+        lblUsername.setText(currentUser.getUsername());
+        lblRole.setText("Role: " + currentUser.getRole().toString());
+
+        initializeProfileComboBox();
     }
 
     @Override
     public void initialize(URL location, ResourceBundle resources) {
         initializeKeyboardShortcuts();
         initializeExportComboBoxes();
-        spinnerRotation.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(0, 270, 90, 90));
+        spinnerRotation.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(1, 360, 5, 1));
         comboBoxProfiles.valueProperty().addListener((obs, oldValue, newValue) -> updateProfileAdjustmentsFields(newValue));
 
+        spinnerFileAdjustmentRotation.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(-360, 360, 0, 1));
+        spinnerFileAdjustmentHue.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(-100, 100, 0, 1));
+        spinnerFileAdjustmentBrightness.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(-100, 100, 0, 1));
+        spinnerFileAdjustmentContrast.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(-100, 100, 0, 1));
+        spinnerFileAdjustmentSaturation.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(-100, 100, 0, 1));
+
+        bindSlider(sliderHue, spinnerFileAdjustmentHue);
+        bindSlider(sliderBrightness, spinnerFileAdjustmentBrightness);
+        bindSlider(sliderContrast, spinnerFileAdjustmentContrast);
+        bindSlider(sliderSaturation, spinnerFileAdjustmentSaturation);
+        bindSlider(sliderRotation, spinnerFileAdjustmentRotation);
+
         setSessionControlsDisabled(true);
-        lblSessionStatus.setText("Press Session Startup to configure and begin.");
         refreshStatusBar();
-        updatePageInfoLabel();
+        updateCurrentPageLabel();
+        updateCurrentDocumentLabel();
     }
 
     private void initializeProfileComboBox() {
         if (modelFacade == null) return;
-        User user = modelFacade.getSessionModel().getCurrentUser();
-        if (user.getProfiles().isEmpty() && !user.isAdmin()) return;
 
-        if (user.isAdmin()) { user.setProfiles(modelFacade.getProfileModel().getProfiles()); }
+        if (currentUser.getProfiles().isEmpty() && !currentUser.isAdmin()) return;
 
-        comboBoxProfiles.setItems(FXCollections.observableArrayList(user.getProfiles()));
+        if (currentUser.isAdmin()) {
+            currentUser.setProfiles(modelFacade.getProfileModel().getProfiles());
+        }
+
+        comboBoxProfiles.setItems(FXCollections.observableArrayList(currentUser.getProfiles()));
     }
 
     private void initializeExportComboBoxes() {
@@ -130,8 +144,6 @@ public class ScanController implements Initializable, IViewController {
     /**
      * Initializes the left-panel tree view with icons for Box, Documents, and Files,
      * drag-and-drop functions, reordering, and auto-expand on structural changes.
-     *
-     * todo explain with inline comments
      */
     private void initializeTreeView(TreeView<TreeNode> treeView, Box rootBox) {
         TreeItem<TreeNode> root = new TreeItem<>(rootBox);
@@ -208,12 +220,11 @@ public class ScanController implements Initializable, IViewController {
                 Label icon = new Label();
                 icon.getStyleClass().add("icon");
 
-                // TODO remove inline css and replace with other solution
                 if (object instanceof Box box) {
                     icon.setText("\ue9d9");
                     icon.getStyleClass().add("tree-cell-box");
                     setText(comboBoxProfiles.getValue().getExportLabel() + box.getBoxName());
-                    setStyle(box.isStaged() ? "-fx-font-weight: bold;" : "");
+                    setStyle(box.isStaged() || box.isModified() ? "-fx-font-weight: bold;" : "");
 
                     ContextMenu contextMenu = new ContextMenu();
 
@@ -226,7 +237,7 @@ public class ScanController implements Initializable, IViewController {
                     icon.setText("\ue963");
                     icon.getStyleClass().add("tree-cell-doc");
                     setText(documentLabel(document));
-                    setStyle(document.isStaged() || document.isModified() ? "-fx-font-weight: bold;" : ""); // styling of text for whether they are staged, modified or persisted
+                    setStyle(document.isStaged() || document.isModified() ? "-fx-font-weight: bold;" : "");
 
                     ContextMenu contextMenu = new ContextMenu();
 
@@ -238,7 +249,7 @@ public class ScanController implements Initializable, IViewController {
                     icon.setText("\ue958");
                     icon.getStyleClass().add("tree-cell-file");
                     setText(fileLabel(file));
-                    setStyle(file.isStaged() ? "-fx-font-weight: bold;" : ""); // styling of text for whether they are staged or persisted
+                    setStyle(file.isStaged() ? "-fx-font-weight: bold;" : "");
 
                     // context menu :)
                     ContextMenu contextMenu = new ContextMenu();
@@ -270,7 +281,7 @@ public class ScanController implements Initializable, IViewController {
         // Build the shortcut map for the Scan workspace
         Map<KeyCodeCombination, Runnable> shortcuts = new HashMap<>();
 
-        shortcuts.put(new KeyCodeCombination(KeyCode.ENTER),
+        shortcuts.put(new KeyCodeCombination(KeyCode.SPACE),
                 () -> { if (!scanning) onScan(null); else onStop(null); });
         shortcuts.put(new KeyCodeCombination(KeyCode.LEFT),
                 () -> onNavPrev(null));
@@ -331,7 +342,6 @@ public class ScanController implements Initializable, IViewController {
         GlobalKeyHandler.getInstance().setLayer(shortcuts);
     }
 
-    // Session Startup popup
     @FXML
     private void onSessionStartup(ActionEvent e) {
         initializeProfileComboBox();
@@ -340,7 +350,8 @@ public class ScanController implements Initializable, IViewController {
         workspaceView.setDisable(true);
     }
 
-    @FXML private void onSessionPopupClose(ActionEvent e) {
+    @FXML
+    private void onSessionPopupClose(ActionEvent e) {
         sessionPopupOverlay.setVisible(false);
         sessionPopupOverlay.setDisable(true);
         workspaceView.setDisable(false);
@@ -366,7 +377,6 @@ public class ScanController implements Initializable, IViewController {
             Box activeBox = modelFacade.getBoxModel().getOrCreateSessionBox(boxInput, profile);
             root.setValue(activeBox);
             scanModel = new ScanModel(activeBox);
-            User currentUser = modelFacade.getSessionModel().getCurrentUser();
             modelFacade.getLogModel().createLog(new Log(currentUser, Integer.parseInt(scanModel.getTargetBox().getBoxName()), EntityType.BOX, LogAction.CREATE, LocalDateTime.now()));
             syncDocumentsFromModel();
             initializeTreeView(boxTreeView, activeBox);
@@ -377,7 +387,7 @@ public class ScanController implements Initializable, IViewController {
             selectedBox = null;
 
             setSessionControlsDisabled(false);
-            lblSessionStatus.setText("Profile: " + profile.getProfileName() + "   Box: " + activeBox.getBoxName());
+            lblSessionStatus.setText(""); // TODO display something or nah?
             sessionPopupOverlay.setVisible(false);
             sessionPopupOverlay.setDisable(true);
             workspaceView.setDisable(false);
@@ -394,6 +404,9 @@ public class ScanController implements Initializable, IViewController {
      * A {@value scanDelay} ms delay is inserted after each successful scan
      * so the scanner hardware has time to advance the next page.
      * The first scan of an empty box always fetches a barcode page (enforced by ScanManager).
+     * <p>
+     * Each scan result pushes one undo entry. The undo removes the scanned file.
+     * If a new document was created by a barcode split undo removes that document too.
      */
     @FXML
     private void onScan(ActionEvent e) {
@@ -401,6 +414,7 @@ public class ScanController implements Initializable, IViewController {
 
         scanning = true;
         btnScan.setDisable(true);
+        btnStop.setDisable(false);
 
         scanThread = new Thread(() -> {
             while (scanning) {
@@ -410,9 +424,42 @@ public class ScanController implements Initializable, IViewController {
                     if (!scanning) break; // stop was pressed during fetch (leave loop)
 
                     Platform.runLater(() -> {
+                        // snapshot document list before sync to detect newly created documents
+                        Set<Document> documentsBefore = new HashSet<>(documents);
+
                         syncDocumentsFromModel();
                         selectPage(result.document(), result.file());
                         rebuild();
+
+                        // determine whether fetchScan created a brand-new document
+                        Document scannedDocument = result.document();
+                        File scannedFile = result.file();
+                        boolean newDocumentCreated = !documentsBefore.contains(scannedDocument);
+
+                        pushUndo(() -> {
+                            scannedDocument.getFiles().remove(scannedFile);
+
+                            // if a new document was created by a barcode split, remove it too
+                            if (newDocumentCreated) {
+                                try {
+                                    scanModel.deleteDocument(scannedDocument);
+                                } catch (Exception ex) {
+                                    ex.printStackTrace();
+                                }
+                            }
+
+                            syncDocumentsFromModel();
+
+                            // move selection to the last remaining page or clear it
+                            List<File> remaining = allPages();
+                            if (remaining.isEmpty()) {
+                                selectedDocument = null;
+                                selectedFile = null;
+                            } else {
+                                selectedFile = remaining.getLast();
+                                selectedDocument = findOwnerDocument(selectedFile);
+                            }
+                        });
                     });
 
                     Thread.sleep(scanDelay);
@@ -425,8 +472,7 @@ public class ScanController implements Initializable, IViewController {
                     Platform.runLater(() -> {
                         btnScan.setDisable(false);
                         btnStop.setDisable(true);
-                        AlertHelper.showError("Scan Failed",
-                                "Scanning stopped. Could not fetch the next page. Please try again.");
+                        AlertHelper.showError("Scan Failed", "Scanning stopped. Could not fetch the next page. Please try again.");
                     });
                     return;
                 }
@@ -456,17 +502,29 @@ public class ScanController implements Initializable, IViewController {
         }
     }
 
+    /** Creates a new empty document and selects it. */
     @FXML
     private void onNewDocument(ActionEvent e) {
         if (!sessionActive || scanModel == null) return;
 
         try {
-            Document newDoc = scanModel.manualSplit();
+            Document newDocument = scanModel.manualSplit();
             syncDocumentsFromModel();
 
-            // select the new document so the tree highlights it;
-            selectedDocument = newDoc;
+            // select the new document so the tree highlights it
+            selectedDocument = newDocument;
             selectedFile = null;
+
+            pushUndo(() -> {
+                try {
+                    scanModel.deleteDocument(newDocument);
+                } catch (Exception ex) {
+                    ex.printStackTrace();
+                }
+                syncDocumentsFromModel();
+                selectedDocument = null;
+                selectedFile = null;
+            });
 
             rebuild();
         } catch (Exception ex) {
@@ -489,17 +547,34 @@ public class ScanController implements Initializable, IViewController {
         try {
             // collect all files from the split point onwards
             List<File> toMove = new ArrayList<>(files.subList(actualSplitIndex, files.size()));
+            Document originalDocument = selectedDocument;
 
-            Document newDoc = scanModel.manualSplit();
+            Document newDocument = scanModel.manualSplit();
             syncDocumentsFromModel();
             // move files into the new document
             for (File file : toMove) {
-                selectedDocument.getFiles().remove(file);
-                newDoc.getFiles().add(file);
+                originalDocument.getFiles().remove(file);
+                newDocument.getFiles().add(file);
             }
 
-            selectedDocument = newDoc;
+            selectedDocument = newDocument;
             selectedFile = toMove.getFirst();
+
+            pushUndo(() -> {
+                // return every moved file to the original document in order
+                for (File file : toMove) {
+                    newDocument.getFiles().remove(file);
+                    originalDocument.getFiles().add(file);
+                }
+                try {
+                    scanModel.deleteDocument(newDocument);
+                } catch (Exception ex) {
+                    ex.printStackTrace();
+                }
+                syncDocumentsFromModel();
+                selectedDocument = originalDocument;
+                selectedFile = toMove.getFirst();
+            });
 
             rebuild();
         } catch (Exception ex) {
@@ -538,86 +613,165 @@ public class ScanController implements Initializable, IViewController {
 
     }
 
+    /**
+     * Deletes the currently selected file, document, or box.
+     * <p>
+     * File deletion also deletes any documents that are left empty afterward.
+     * <p>
+     * Undo for a file re-inserts it at its original index in its owner document,
+     * and re-inserts any documents that were auto-removed because they became empty.
+     * Undo for a document re-inserts the entire document (with its files) at its
+     * original position in the list.
+     */
     @FXML
     private void onDeleteFileOrDocument(ActionEvent e) {
         if (scanModel == null || !sessionActive) return;
 
         try {
             if (selectedFile != null) {
-                int deletedIndex = currentPageIndex();
-                scanModel.deleteFile(selectedFile);
+                Document ownerDoc = findOwnerDocument(selectedFile);
+                if (ownerDoc == null) return;
 
-                List<Document> emptyDocuments = new ArrayList<>(documents);
-                emptyDocuments.removeIf(document -> !document.getFiles().isEmpty());
-                for (Document emptyDocument : emptyDocuments) {
-                    scanModel.deleteDocument(emptyDocument);
+                // capture position before any changes
+                final int fileIndex  = ownerDoc.getFiles().indexOf(selectedFile);
+                final File capturedFile = selectedFile;
+                final Document capturedOwnerDoc = ownerDoc;
+
+                // snapshot every document that will be auto-removed after the file deletion
+                final List<AbstractMap.SimpleEntry<Integer, Document>> docsToRestore = new ArrayList<>();
+                for (int i = 0; i < documents.size(); i++) {
+                    Document doc = documents.get(i);
+                    if (doc.getFiles().isEmpty() || (doc == ownerDoc && doc.getFiles().size() == 1)) {
+                        docsToRestore.add(new AbstractMap.SimpleEntry<>(i, doc));
+                    }
                 }
 
-                syncDocumentsFromModel(); // resync the observable list so that it matches the models
+                int deletedPageIndex = currentPageIndex();
+                scanModel.deleteFile(capturedFile);
 
-                // clear selection if nothing left, else select nearest file
+                List<Document> emptyDocuments = new ArrayList<>(documents);
+                emptyDocuments.removeIf(doc -> !doc.getFiles().isEmpty());
+                for (Document emptyDoc : emptyDocuments) {
+                    scanModel.deleteDocument(emptyDoc);
+                }
+
+                syncDocumentsFromModel();
+
                 List<File> remaining = allPages();
                 if (remaining.isEmpty()) {
                     selectedDocument = null;
                     selectedFile = null;
                 } else {
-                    int next = Math.min(deletedIndex, remaining.size() - 1);
+                    int next = Math.min(deletedPageIndex, remaining.size() - 1);
                     selectedFile = remaining.get(Math.max(next, 0));
                     selectedDocument = findOwnerDocument(selectedFile);
                 }
 
+                pushUndo(() -> {
+                    List<Document> modelDocs = scanModel.getTargetBox().getDocuments();
+
+                    // re-insert auto-removed documents at their original positions
+                    docsToRestore.sort(Comparator.comparingInt(AbstractMap.SimpleEntry::getKey));
+                    for (AbstractMap.SimpleEntry<Integer, Document> entry : docsToRestore) {
+                        if (!modelDocs.contains(entry.getValue())) {
+                            int idx = Math.min(entry.getKey(), modelDocs.size());
+                            modelDocs.add(idx, entry.getValue());
+                        }
+                    }
+
+                    // re-insert the deleted file into its owner document
+                    if (!capturedOwnerDoc.getFiles().contains(capturedFile)) {
+                        int insertIdx = Math.min(fileIndex, capturedOwnerDoc.getFiles().size());
+                        capturedOwnerDoc.getFiles().add(insertIdx, capturedFile);
+                    }
+
+                    syncDocumentsFromModel();
+                    selectPage(capturedOwnerDoc, capturedFile);
+                });
+
             } else if (selectedDocument != null) {
-                scanModel.deleteDocument(selectedDocument);
+                final int documentIndex = documents.indexOf(selectedDocument);
+                final Document capturedDoc = selectedDocument;
+                // snapshot the file list so undo can restore the full document contents
+                final List<File> capturedFiles = new ArrayList<>(selectedDocument.getFiles());
+
+                scanModel.deleteDocument(capturedDoc);
                 syncDocumentsFromModel();
                 selectedDocument = null;
                 selectedFile = null;
+
+                pushUndo(() -> {
+                    List<Document> modelDocs = scanModel.getTargetBox().getDocuments();
+                    if (!modelDocs.contains(capturedDoc)) {
+                        // restore files onto the document object before re-inserting
+                        capturedDoc.getFiles().clear();
+                        capturedDoc.getFiles().addAll(capturedFiles);
+                        int idx = Math.min(documentIndex, modelDocs.size());
+                        modelDocs.add(idx, capturedDoc);
+                    }
+                    syncDocumentsFromModel();
+                    selectedDocument = capturedDoc;
+                    selectedFile = capturedFiles.isEmpty() ? null : capturedFiles.getFirst();
+                });
+
             } else if (selectedBox != null) {
-                System.out.println("DELETING BOX");
                 onDeleteBox();
             }else return;
 
             rebuild();
         } catch (Exception ex) {
             ex.printStackTrace();
-            AlertHelper.showError("Delete Failed", "Could not delete the selected "
-                    + (selectedFile != null ? "file." : "document. ") + "Please try again.");
+            String itemType = selectedFile != null ? "selected file" : selectedDocument != null ? "selected document" : "box";
+            AlertHelper.showError("Delete Failed", "Could not delete the "
+                    + itemType + ". Please try again.");
         }
     }
 
-    @FXML private void onRotateLeft(ActionEvent e)  { rotatePage(-1); }
+    @FXML private void onRotateLeft(ActionEvent e) { rotatePage(-1); }
     @FXML private void onRotateRight(ActionEvent e) { rotatePage(1); }
-    @FXML
-    private void onFileAdjustments(ActionEvent actionEvent) {
-        if (selectedFile == null || scanModel == null) return;
-        populateFileAdjustmentsFields(selectedFile);
-        sessionPopupOverlay1.setVisible(true);
-        sessionPopupOverlay1.setDisable(false);
-        workspaceView.setDisable(true);
-    }
 
     @FXML
-    private void onFileAdjustmentsClose(ActionEvent e) {
-        sessionPopupOverlay1.setVisible(false);
-        sessionPopupOverlay1.setDisable(true);
-        workspaceView.setDisable(false);
+    private void onToggleFileAdjustments(ActionEvent actionEvent) {
+        if (!fileAdjustmentSideMenu.isVisible()) {
+            populateFileAdjustmentsFields(selectedFile);
+            fileAdjustmentSideMenu.setManaged(true);
+            fileAdjustmentSideMenu.setVisible(true);
+        } else {
+            fileAdjustmentSideMenu.setManaged(false);
+            fileAdjustmentSideMenu.setVisible(false);
+        }
     }
 
+    /** Applies slider values as a new {@link FileAdjustmentSettings} to the selected file. */
     @FXML
     private void onApplyFileAdjustments(ActionEvent e) {
         if (selectedFile == null || scanModel == null) return;
         try {
-            int rotation = parseRotationField(txtFldIndividualFileRotation);
-            double hue = parseDoubleField(txtFldIndividualFileHue,"Hue",-1.0, 1.0);
-            double brightness = parseDoubleField(txtFldIndividualFileBrightness,"Brightness",-1.0,1.0);
-            double contrast = parseDoubleField(txtFldIndividualFileContrast,"Contrast",-1.0,1.0);
-            double saturation = parseDoubleField(txtFldIndividualFileSaturation,"Saturation",-1.0,1.0);
+            int rotation = (int) sliderRotation.getValue();
+            double hue = sliderHue.getValue();
+            double brightness = sliderBrightness.getValue();
+            double contrast = sliderContrast.getValue();
+            double saturation = sliderSaturation.getValue();
 
-            FileAdjustmentSettings settings = new FileAdjustmentSettings(rotation, hue, brightness, contrast, saturation);
-            scanModel.updateFileSettings(selectedFile, settings);
+            // snapshot old settings into a copy before any mutation
+            FileAdjustmentSettings oldSettings = new FileAdjustmentSettings(selectedFile.getRotation(), selectedFile.getHue(), selectedFile.getBrightness(), selectedFile.getContrast(), selectedFile.getSaturation());
+            FileAdjustmentSettings newSettings = new FileAdjustmentSettings(rotation, hue, brightness, contrast, saturation);
+
+            final File capturedFile = selectedFile;
+            scanModel.updateFileSettings(capturedFile, newSettings);
+
+            pushUndo(() -> {
+                try {
+                    scanModel.updateFileSettings(capturedFile, oldSettings);
+                } catch (Exception ex) {
+                    ex.printStackTrace();
+                }
+            });
+
             rebuildPreviewCard();
-            onFileAdjustmentsClose(null);
         } catch (IllegalArgumentException ex) {
             AlertHelper.showError("Invalid Input", ex.getMessage());
+            // TODO add visual feedback
         } catch (Exception ex) {
             ex.printStackTrace();
             AlertHelper.showError("Settings Failed", "Could not apply file settings. Please try again.");
@@ -625,13 +779,11 @@ public class ScanController implements Initializable, IViewController {
     }
 
     private void onDeleteBox() {
-
         AlertHelper.showConfirmation("Delete Box", "Are you sure you want to delete this box?\n"
         + "This action is permanent and cannot be undone.", () -> {
             try {
                 scanModel.deleteBox();
                 modelFacade.getBoxModel().deleteBox(scanModel.getTargetBox());
-                User currentUser = modelFacade.getSessionModel().getCurrentUser();
                 modelFacade.getLogModel().createLog(new Log(currentUser, Integer.parseInt(scanModel.getTargetBox().getBoxName()), EntityType.BOX, LogAction.DELETE, LocalDateTime.now()));
                 boxTreeView.setShowRoot(false);
 
@@ -646,7 +798,7 @@ public class ScanController implements Initializable, IViewController {
                 sessionPopupOverlay.setVisible(true);
                 sessionPopupOverlay.setDisable(false);
                 workspaceView.setDisable(true);
-                lblSessionStatus.setText("");
+                lblSessionStatus.setText("Press Session Startup to configure and begin.");
 
                 rebuild();
             }
@@ -658,46 +810,27 @@ public class ScanController implements Initializable, IViewController {
 
     }
 
-    private int parseRotationField(TextField field) {
-        try {
-            return Integer.parseInt(field.getText().trim());
-        } catch (NumberFormatException e) {
-            throw new IllegalArgumentException("Rotation must be a whole number (0, 90, 180 or 270).");
-        }
-    }
-
-    private double parseDoubleField(TextField field, String name, double min, double max) {
-        double value;
-        try {
-            value = Double.parseDouble(field.getText().trim());
-        } catch (NumberFormatException e) {
-            throw new IllegalArgumentException(name + " must be a number between " + min + " and " + max + ".");
-        }
-        if (value < min || value > max) {
-            throw new IllegalArgumentException(name + " must be between " + min + " and " + max + ".");
-        }
-        return value;
-    }
-
+    /** Rotates the selected file by {@code spinnerRotation} degrees in the given direction. */
     private void rotatePage(int direction) {
         if (selectedFile == null || scanModel == null) return;
 
         int degrees = spinnerRotation.getValue() * direction;
-        int previousRotation = selectedFile.getRotation(); // save before changing
-        int rotation = normaliseRotation(previousRotation + degrees);
-        try {
-            scanModel.updateFileRotation(selectedFile, rotation);
-            rebuildPreviewCard();
+        int oldRotation = selectedFile.getRotation();
+        int newRotation = normalizeRotation(oldRotation + degrees);
 
-            File fileRef = selectedFile;
-            undoStack.push(() -> {
+        try {
+            final File capturedFile = selectedFile;
+            scanModel.updateFileRotation(capturedFile, newRotation);
+
+            pushUndo(() -> {
                 try {
-                    scanModel.updateFileRotation(fileRef, previousRotation);
-                    rebuildPreviewCard();
+                    scanModel.updateFileRotation(capturedFile, oldRotation);
                 } catch (Exception ex) {
-                    AlertHelper.showError("Undo Failed", "Could not undo rotation.");
+                    ex.printStackTrace();
                 }
             });
+
+            rebuildPreviewCard();
         } catch (Exception ex) {
             ex.printStackTrace();
             AlertHelper.showError("Rotation Failed", "Could not update file rotation.");
@@ -706,16 +839,14 @@ public class ScanController implements Initializable, IViewController {
 
     // TreeView navigation
     @FXML private void onNavFirst(ActionEvent e) { navigateTo(0); }
-    @FXML private void onNavPrev(ActionEvent e)  { navigateTo(currentPageIndex() - 1); }
-    @FXML private void onNavNext(ActionEvent e)  { navigateTo(currentPageIndex() + 1); }
-    @FXML private void onNavLast(ActionEvent e)  { navigateTo(allPages().size() - 1); }
-
-    private boolean navigating = false;
+    @FXML private void onNavPrev(ActionEvent e) { navigateTo(currentPageIndex() - 1); }
+    @FXML private void onNavNext(ActionEvent e) { navigateTo(currentPageIndex() + 1); }
+    @FXML private void onNavLast(ActionEvent e) { navigateTo(allPages().size() - 1); }
 
     private void navigateTo(int index) {
         List<File> all = allPages();
         if (all.isEmpty()) return;
-        index = Math.max(0, Math.min(index, all.size() - 1));
+        index = Math.clamp(index, 0, all.size() - 1);
         File target = all.get(index);
         for (Document document : documents) {
             if (document.getFiles().contains(target)) {
@@ -724,7 +855,7 @@ public class ScanController implements Initializable, IViewController {
             }
         }
 
-        // Detach listener, sync tree, then reattach — prevents selection event snapping back
+        // detach listener, sync tree, then reattach - prevents selection event snapping back
         boxTreeView.getSelectionModel().selectedItemProperty().removeListener(treeSelectionListener);
         rebuildPreviewCard();
         syncTreeSelection();
@@ -759,19 +890,18 @@ public class ScanController implements Initializable, IViewController {
         ExportMode mode = comboBoxExport.getValue();
         if (mode == null) {
             AlertHelper.showError("Export", "Please select an export mode.");
+            // TODO add visual feedback
             return;
         }
 
-        // ask user where to save the export
         DirectoryChooser chooser = new DirectoryChooser();
         chooser.setTitle("Choose Export Destination");
         java.io.File exportDirectory = chooser.showDialog(currentStage);
-        if (exportDirectory == null) return; // user cancelled
+        if (exportDirectory == null) return; // user canceled
 
         try {
-            scanModel.save(); // persist staged data first
+            scanModel.save();
             scanModel.export(exportDirectory, mode);
-            User currentUser = modelFacade.getSessionModel().getCurrentUser();
             modelFacade.getLogModel().createLog(new Log(currentUser, Integer.parseInt(scanModel.getTargetBox().getBoxName()), EntityType.BOX, LogAction.EXPORT, LocalDateTime.now()));
             rebuild();
             AlertHelper.showInformation("Export Complete", "Export finished. \nFiles saved to:" + exportDirectory.getAbsolutePath());
@@ -785,6 +915,14 @@ public class ScanController implements Initializable, IViewController {
     private void onUndo(ActionEvent e) {
         if (undoStack.isEmpty()) return;
         undoStack.pop().run();
+        btnUndo.setDisable(undoStack.isEmpty());
+        rebuild();
+    }
+
+    private void pushUndo(Runnable inverse) {
+        if (undoStack.size() >= maxUndos) undoStack.removeLast();
+        undoStack.push(inverse);
+        btnUndo.setDisable(false);
     }
 
     @FXML
@@ -795,8 +933,7 @@ public class ScanController implements Initializable, IViewController {
         AlertHelper.showConfirmation("Exit Window", "Are you sure you want to exit?\n"
                 + "Any unsaved progress will be deleted.", () -> {
             try {
-                User user = modelFacade.getSessionModel().getCurrentUser();
-                ViewHandler handler = user.isAdmin() ? ViewHandler.ADMIN : ViewHandler.LOGIN;
+                ViewHandler handler = currentUser.isAdmin() ? ViewHandler.ADMIN : ViewHandler.LOGIN;
                 handler.reset();
                 handler.show(modelFacade);
                 modelFacade.getSessionModel().logout();
@@ -809,7 +946,6 @@ public class ScanController implements Initializable, IViewController {
     }
 
     private void onTreeSelectionChanged(TreeItem<TreeNode> item) {
-        if (navigating) return;
         if (item == null || item.getValue() == null) return;
 
         TreeNode value = item.getValue();
@@ -825,26 +961,35 @@ public class ScanController implements Initializable, IViewController {
                 }
             }
         } else if (value instanceof Box box) {
-
             selectedBox = box;
             selectedDocument = null;
             selectedFile = null;
-
         }
 
         rebuildPreviewCard();
     }
 
+    /** Moves {@code file} to the end of {@code target}'s file list. */
     private boolean moveFileToDocument(File file, Document target) {
         Document source = findOwnerDocument(file);
         if (source == null || source == target) return false;
 
+        final int originalIndex = source.getFiles().indexOf(file);
         source.getFiles().remove(file);
         target.getFiles().add(file);
         persistFileMoved(file, target);
+
+        pushUndo(() -> {
+            target.getFiles().remove(file);
+            int restoreIdx = Math.min(originalIndex, source.getFiles().size());
+            source.getFiles().add(restoreIdx, file);
+            persistFileMoved(file, source);
+        });
+
         return true;
     }
 
+    /** Inserts {@code dragged} immediately before {@code targetFile}, possibly moving it to a different document. */
     private boolean moveFileBefore(File dragged, File targetFile) {
         if (dragged == targetFile) return false;
 
@@ -852,19 +997,40 @@ public class ScanController implements Initializable, IViewController {
         Document targetOwner  = findOwnerDocument(targetFile);
         if (draggedOwner == null || targetOwner == null) return false;
 
+        final int originalIndex = draggedOwner.getFiles().indexOf(dragged);
+        final Document originalOwner = draggedOwner;
+
         draggedOwner.getFiles().remove(dragged);
         int insertIndex = targetOwner.getFiles().indexOf(targetFile);
         targetOwner.getFiles().add(insertIndex, dragged);
         persistFileMoved(dragged, targetOwner);
+
+        pushUndo(() -> {
+            targetOwner.getFiles().remove(dragged);
+            int restoreIdx = Math.min(originalIndex, originalOwner.getFiles().size());
+            originalOwner.getFiles().add(restoreIdx, dragged);
+            persistFileMoved(dragged, originalOwner);
+        });
+
         return true;
     }
 
+    /** Moves {@code dragged} immediately before {@code target} in the document list. */
     private boolean reorderDocument(Document dragged, Document target) {
         if (dragged == target) return false;
+
+        final int originalIndex = documents.indexOf(dragged);
 
         documents.remove(dragged);
         int insertIndex = documents.indexOf(target);
         documents.add(insertIndex, dragged);
+
+        pushUndo(() -> {
+            documents.remove(dragged);
+            int restoreIdx = Math.min(originalIndex, documents.size());
+            documents.add(restoreIdx, dragged);
+        });
+
         return true;
     }
 
@@ -898,8 +1064,22 @@ public class ScanController implements Initializable, IViewController {
             pageGrid.getChildren().add(buildPageCard(selectedDocument, selectedDocument.getFiles().getFirst()));
         }
 
-        updatePageInfoLabel();
-        lblEmptyState.setVisible(pageGrid.getChildren().isEmpty());
+        if (selectedFile != null) {
+            btnFileAdjustments.setManaged(true);
+            btnFileAdjustments.setVisible(true);
+            if (fileAdjustmentSideMenu.isVisible()) {
+                populateFileAdjustmentsFields(selectedFile);
+            }
+        } else {
+            fileAdjustmentSideMenu.setManaged(false);
+            fileAdjustmentSideMenu.setVisible(false);
+            btnFileAdjustments.setManaged(false);
+            btnFileAdjustments.setVisible(false);
+        }
+
+        updateCurrentPageLabel();
+        updateCurrentDocumentLabel();
+        lblEmptyState.setVisible(pageGrid.getChildren().isEmpty()); // setVisible(true) if pageGrid.getChildren().isEmpty() else false
     }
 
     private void refreshTree() {
@@ -915,7 +1095,6 @@ public class ScanController implements Initializable, IViewController {
             root.getChildren().add(docItem);
         }
 
-        // Sync tree selection with selectedFile / selectedDocument
         syncTreeSelection();
     }
 
@@ -950,14 +1129,34 @@ public class ScanController implements Initializable, IViewController {
         stPagesLabel.setText("Files: " + totalPageCount());
     }
 
-    private void updatePageInfoLabel() {
-        List<File> all = allPages();
-        int index = currentPageIndex();
-        if (all.isEmpty() || index < 0) {
-            pageInfoLabel.setText("0 / 0");
+    private void updateCurrentPageLabel() {
+        if (selectedFile == null || selectedDocument == null) {
+            lblCurrentPage.setText("Page: 0 / 0");
             return;
         }
-        pageInfoLabel.setText((index + 1) + " / " + all.size());
+
+        int pageIndex = selectedDocument.getFiles().indexOf(selectedFile);
+        int pageCount = selectedDocument.getFiles().size();
+
+        if (pageIndex < 0) {
+            lblCurrentPage.setText("Page: 0 / 0");
+            return;
+        }
+
+        lblCurrentPage.setText("Page: " + (pageIndex + 1) + " / " + pageCount);
+    }
+
+    private void updateCurrentDocumentLabel() {
+        if (selectedDocument == null || documents.isEmpty()) {
+            lblCurrentDocument.setText("Doc: 0");
+            return;
+        }
+        int docIndex = documents.indexOf(selectedDocument);
+        if (docIndex < 0) {
+            lblCurrentDocument.setText("Doc: 0");
+            return;
+        }
+        lblCurrentDocument.setText("Doc: " + (docIndex + 1));
     }
 
     private VBox buildPageCard(Document document, File file) {
@@ -965,12 +1164,14 @@ public class ScanController implements Initializable, IViewController {
         double ch = cardHeight();
 
         ImageView thumb = new ImageView();
+        currentPreviewImageView = thumb;
         if (file.getImageData() != null) {
-            Image image = createPreviewImage(file.getImageData(), cw - 8, ch - 44);
+            Image image = file.getPreviewImage(cw - 8, ch - 44);
             if (!image.isError()) {
                 thumb.setImage(image);
             }
         }
+
         thumb.setFitWidth(cw - 8);
         thumb.setFitHeight(ch - 44);
         thumb.setPreserveRatio(true);
@@ -995,24 +1196,11 @@ public class ScanController implements Initializable, IViewController {
         card.setUserData(file);
         card.setOnMouseClicked(event -> {
             selectPage(document, file);
-            updatePageInfoLabel();
+            updateCurrentPageLabel();
+            updateCurrentDocumentLabel();
         });
 
         return card;
-    }
-
-    private Image createPreviewImage(byte[] imageData, double width, double height) {
-        try {
-            ImageIO.scanForPlugins();
-            BufferedImage bufferedImage = ImageIO.read(new ByteArrayInputStream(imageData));
-            if (bufferedImage != null) {
-                ByteArrayOutputStream pngOut = new ByteArrayOutputStream();
-                ImageIO.write(bufferedImage, "png", pngOut);
-                return new Image(new ByteArrayInputStream(pngOut.toByteArray()), width, height, true, true);
-            }
-        } catch (Exception ignored) {}
-
-        return new Image(new ByteArrayInputStream(imageData), width, height, true, true);
     }
 
     private double cardWidth() { return 520 * zoomLevel; }
@@ -1029,6 +1217,7 @@ public class ScanController implements Initializable, IViewController {
             txtFldGlobalSaturation.clear();
             return;
         }
+
         FileAdjustmentSettings settings = profile.getFileAdjustmentSettings();
         txtFldGlobalRotation.setText(String.valueOf(settings.getRotation()));
         txtFldGlobalHue.setText(String.valueOf(settings.getHue()));
@@ -1038,11 +1227,49 @@ public class ScanController implements Initializable, IViewController {
     }
 
     private void populateFileAdjustmentsFields(File file) {
-        txtFldIndividualFileRotation.setText(String.valueOf(file.getRotation()));
-        txtFldIndividualFileHue.setText(String.valueOf(file.getHue()));
-        txtFldIndividualFileBrightness.setText(String.valueOf(file.getBrightness()));
-        txtFldIndividualFileContrast.setText(String.valueOf(file.getContrast()));
-        txtFldIndividualFileSaturation.setText(String.valueOf(file.getSaturation()));
+        sliderHue.setValue(file.getHue());
+        sliderBrightness.setValue(file.getBrightness());
+        sliderContrast.setValue(file.getContrast());
+        sliderSaturation.setValue(file.getSaturation());
+        sliderRotation.setValue(file.getRotation());
+    }
+
+    /**
+     * Wires a slider and spinner together so they stay in sync
+     * and triggers a live preview on every slider change.
+     *
+     * @param slider the slider to listen on
+     * @param spinner the spinner to keep in sync with the slider
+     */
+    private void bindSlider(Slider slider, Spinner<Integer> spinner) {
+        slider.valueProperty().addListener((obs, o, newValue) -> {
+            spinner.getValueFactory().setValue(newValue.intValue());
+            applySliderPreview();
+        });
+        spinner.getEditor().textProperty().addListener((obs, o, newValue) -> {
+            try {
+                slider.setValue(Integer.parseInt(newValue));
+            } catch (NumberFormatException ignored) {}
+        });
+    }
+
+    /**
+     * Applies the current slider values as a live preview on the selected File's
+     * image without persisting anything to the File object.
+     */
+    private void applySliderPreview() {
+        if (!fileAdjustmentSideMenu.isVisible() || currentPreviewImageView == null) return;
+
+        currentPreviewImageView.setEffect(new ColorAdjust(
+                sliderHue.getValue() / 100,
+                sliderSaturation.getValue() / 100,
+                sliderBrightness.getValue() / 100,
+                sliderContrast.getValue() / 100
+        ));
+
+        if (!pageGrid.getChildren().isEmpty()) {
+            pageGrid.getChildren().getFirst().setRotate(sliderRotation.getValue());
+        }
     }
 
     private void selectPage(Document document, File file) {
@@ -1066,15 +1293,12 @@ public class ScanController implements Initializable, IViewController {
     private void setSessionControlsDisabled(boolean disabled) {
         btnScan.setDisable(disabled);
         btnStop.setDisable(disabled);
-        btnRotLeft.setDisable(disabled);
-        btnRotRight.setDisable(disabled);
-        btnNewDoc.setDisable(disabled);
-        btnSplitDoc.setDisable(disabled);
-        btnDelete.setDisable(disabled);
         btnUndo.setDisable(disabled);
         btnExport.setDisable(disabled);
         btnZoomOut.setDisable(disabled);
         btnZoomIn.setDisable(disabled);
+        btnRotLeft.setDisable(disabled);
+        btnRotRight.setDisable(disabled);
     }
 
     private String documentLabel(Document document) {
@@ -1083,13 +1307,13 @@ public class ScanController implements Initializable, IViewController {
     }
 
     private String fileLabel(File file) {
-        for (Document doc : documents) {
-            int position = doc.getFiles().indexOf(file);
+        for (Document document : documents) {
+            int position = document.getFiles().indexOf(file);
             if (position >= 0) {
                 return "Page " + (position + 1);
             }
         }
-        return "Page ?"; // should not happen - something's wrong
+        return "Page ?"; // should not happen :o
     }
 
     private int currentPageIndex() {
@@ -1101,7 +1325,7 @@ public class ScanController implements Initializable, IViewController {
         return documents.stream().filter(document -> document.getFiles().contains(file)).findFirst().orElse(null);
     }
 
-    private int normaliseRotation(int rotation) {
+    private int normalizeRotation(int rotation) {
         return ((rotation % 360) + 360) % 360;
     }
 }
